--- a/exercice-5/index.html
+++ b/exercice-5/index.html
@@ -23,8 +23,8 @@
       <input type="text" name="last name" id="last-name">
     </div>
 
-    <button>Add</button>
-    <button>Cancel</button>
+    <button type="button">Add</button>
+    <button type="button">Cancel</button>
   </form>
   
   <hr>
